--- a/src/styles/Recommended.scss
+++ b/src/styles/Recommended.scss
@@ -10,14 +10,13 @@
 }
 
 .div-mobile{
-    display: none;
     width: 100%;
     height: 300px;
-    display: none;
+    display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 10px;
-    min-width: 397px;
+    /*min-width: 397px;*/
 }
 
  .div-container {
@@ -34,7 +33,7 @@
     height: 220px;
     display: flex;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 0;
     background: linear-gradient(rgb(219, 212, 212),var(--white));
     display: flex;
     align-items: center;
@@ -109,7 +108,6 @@
     .div-container__text h1{
         font-size: 18px;
     }
-
 }
 
 @media (max-width: 700px) {
@@ -128,7 +126,7 @@
     }
  }
 
- @media (max-width: 460px) {
+ @media (max-width: 650px) {
      .div-desktop{
          display: none;
      }
