--- a/src/styles/Recommended.scss
+++ b/src/styles/Recommended.scss
@@ -12,7 +12,7 @@
 .div-mobile{
     width: 100%;
     height: 300px;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     margin-top: 10px;
